# mcdm_exploration_framework

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  LICENSE  README.md  RFIDGridmap.cpp  create_lookup_table.cpp  evaluationrecords.cpp  graphpose.cpp  main.cpp  main.cpp~  main_new.cpp  main_updated.cpp  map.cpp  mcdm_slim.cpp  mcdmfunction.cpp  movebasegoal.cpp  navigation_utilities.cpp  navigation_utilities.h  newray.cpp  package.xml  path_len.cpp  pose.cpp  pure_navigation.cpp  pure_navigation_two_readers.cpp  random_frontier.cpp  random_walk.cpp  ray.cpp  ray2.cpp  rfid_navigation.cpp  rfid_navigation_updated.cpp  utils.cpp
Criteria/: RFIDCriterion.cpp  batterystatuscriterion.cpp  criterion.cpp  criterion.cpp~  criterioncomparator.cpp  criterioncomparator.cpp~  informationgaincriterion.cpp  informationgaincriterion.cpp~  mcdmweightreader.cpp  mcdmweightreader.cpp~  radmeancriterion.cpp  radvariancecriterion.cpp  sensingtimecriterion.cpp  sensingtimecriterion.cpp~  traveldistancecriterion.cpp  traveldistancecriterion.cpp~  weightmatrix.cpp  weightmatrix.cpp~
PathFinding/: astar.cpp  node.cpp
config/: custom_rosconsole.conf  visualization.yaml  visualization2.yaml
distances_db/: riseholme_map.csv
include/: RFIDGridmap.h  constants.h  edge.h  evaluationrecords.h  explorationconstants.h  graphpose.h  map.h  map.h~  mcdmfunction.h  mcdmfunction.h~  movebasegoal.h  navigation_utilities.h  newray.h  pose.h  ray.h  utils.h
include/Criteria/: RFIDCriterion.h  batterystatuscriterion.h  criteriaName.h  criterion.h  criterioncomparator.h  informationgaincriterion.h  mcdmweightreader.h  radmeancriterion.h  radvariancecriterion.h  sensingtimecriterion.h  traveldistancecriterion.h  weightmatrix.h
include/PathFinding/: astar.h  node.h
launch/: create_lookup_table_distance.launch  pure.launch  random_frontier.launch  random_walk.launch  rfid-navigation.launch
radio_models/: propagationModel.cpp
script/: closest_node.py
srv/: GetClosestNode.srv
